--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="home-article-1">
+        <h1>"Explore Together"</h1>
+        <p>
+          Come join us at the Community Science Museum where we’re committed to
+          making science accessible to all.
+        </p>
+        <p>
+          Over the course of human history, science has developed from our early
+          understanding of fire, wind, water, and earth to exploring everything
+          from galaxies far away to the very building blocks of life itself.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
