--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <main>
-      <section class="home-article-1">
+      <section class="home-section-1">
         <h1>"Explore Together"</h1>
         <p>
           Come join us at the Community Science Museum where we’re committed to
@@ -49,6 +49,16 @@
           understanding of fire, wind, water, and earth to exploring everything
           from galaxies far away to the very building blocks of life itself.
         </p>
+      </section>
+      <section class="home-section-2">
+        <article class="home-section-2-article">
+          <div class="home-section-2-article-image-1"></div>
+          <h2>Interactive Exhibitions</h2>
+          <p>
+            Experience all the illuminating adventures science has to offer.
+          </p>
+          <a href="/exhibition.html" class="navigation-buttons">View More</a>
+        </article>
       </section>
     </main>
   </body>
