--- a/index.html
+++ b/index.html
@@ -50,16 +50,60 @@
           from galaxies far away to the very building blocks of life itself.
         </p>
       </section>
-      <section class="home-section-2">
-        <article class="home-section-2-article">
-          <div class="home-section-2-article-image-1"></div>
-          <h2>Interactive Exhibitions</h2>
-          <p>
-            Experience all the illuminating adventures science has to offer.
-          </p>
-          <a href="/exhibition.html" class="navigation-buttons">View More</a>
-        </article>
+      <div class="home-section-wrapper">
+        <section class="home-section-2">
+          <article class="home-section-2-article">
+            <div class="home-section-2-article-image-1"></div>
+            <h2>Interactive Exhibitions</h2>
+            <p>
+              Experience all the illuminating adventures science has to offer.
+            </p>
+            <a href="/exhibition.html" class="navigation-buttons">View More</a>
+          </article>
+        </section>
+        <section class="home-section-2">
+          <article class="home-section-2-article">
+            <div class="home-section-2-article-image-2"></div>
+            <h2>Interactive Exhibitions</h2>
+            <p>
+              Experience all the illuminating adventures science has to offer.
+            </p>
+            <a href="/exhibition.html" class="navigation-buttons">View More</a>
+          </article>
+        </section>
+        <section class="home-section-2">
+          <article class="home-section-2-article">
+            <div class="home-section-2-article-image-3"></div>
+            <h2>Interactive Exhibitions</h2>
+            <p>
+              Experience all the illuminating adventures science has to offer.
+            </p>
+            <a href="/exhibition.html" class="navigation-buttons">View More</a>
+          </article>
+        </section>
+      </div>
+      <section class="event-section">
+        <h3 class="event-header">Events:</h3>
+        <div class="event-article-wrapper">
+          <article>
+            <h4>Visiting Professor of Aeronautics</h4>
+            <p>
+              It is our pleasure to announce that Prof Sheila Widnall from the
+              Massachusetts Institute of Technology will be delivering...
+            </p>
+            <p class="event-date">Dec 3. - Dec 10.</p>
+          </article>
+          <article>
+            <h4>Night in the Museum</h4>
+            <p>
+              Get your family together for an exciting night in the museum as
+              you sleep over beside dinosaurs and science displays...
+            </p>
+            <p class="event-date">Dec 6. - Dec 30.</p>
+          </article>
+        </div>
       </section>
     </main>
+    <footer></footer>
   </body>
 </html>
