--- a/exhibition.html
+++ b/exhibition.html
@@ -38,5 +38,13 @@
       </nav>
     </header>
     <main></main>
+    <footer>
+      <section class="footer-elements">
+        <a href="/about-us.html">About Us</a>
+        <img src="/images/open-science-735787-transparent-white.webp" />
+        <a href="/visit-us.html">Visit Us</a>
+      </section>
+      <div class="footer-background"></div>
+    </footer>
   </body>
 </html>
