--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer-elements">
+        <a href="/about-us.html">About Us</a>
+        <img src="/images/open-science-735787-transparent-white.webp" />
+        <a href="/visit-us.html">Visit Us</a>
+      </section>
+      <div class="footer-background"></div>
+    </footer>
   </body>
 </html>
