--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
             <p>
               Experience all the illuminating adventures science has to offer.
             </p>
-            <a href="/exhibition.html" class="navigation-buttons">View More</a>
+            <div class="button-position">
+              <a href="/exhibition.html" class="navigation-buttons"
+                >View More</a
+              >
+            </div>
           </article>
         </section>
         <section class="home-section-2">
@@ -68,7 +72,11 @@
             <p>
               Experience all the illuminating adventures science has to offer.
             </p>
-            <a href="/exhibition.html" class="navigation-buttons">View More</a>
+            <div class="button-position">
+              <a href="/exhibition.html" class="navigation-buttons"
+                >View More</a
+              >
+            </div>
           </article>
         </section>
         <section class="home-section-2">
@@ -78,7 +86,11 @@
             <p>
               Experience all the illuminating adventures science has to offer.
             </p>
-            <a href="/exhibition.html" class="navigation-buttons">View More</a>
+            <div class="button-position">
+              <a href="/exhibition.html" class="navigation-buttons"
+                >View More</a
+              >
+            </div>
           </article>
         </section>
       </div>
