--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -119,7 +120,10 @@
     <footer>
       <section class="footer-elements">
         <a href="/about-us.html">About Us</a>
-        <img src="/images/open-science-735787-transparent-white.webp" />
+        <img
+          src="/images/open-science-735787-transparent-white.webp"
+          alt="Logo"
+        />
         <a href="/visit-us.html">Visit Us</a>
       </section>
       <div class="footer-background"></div>
