--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@
         <section class="home-section-2">
           <article class="home-section-2-article">
             <div class="home-section-2-article-image-2"></div>
-            <h2>Interactive Exhibitions</h2>
-            <p>
-              Experience all the illuminating adventures science has to offer.
-            </p>
+            <h2>The Human Evolution</h2>
+            <p>See how we humans have evolved over millennias.</p>
             <div class="button-position">
               <a href="/exhibition.html" class="navigation-buttons"
                 >View More</a
@@ -83,10 +81,8 @@
         <section class="home-section-2">
           <article class="home-section-2-article">
             <div class="home-section-2-article-image-3"></div>
-            <h2>Interactive Exhibitions</h2>
-            <p>
-              Experience all the illuminating adventures science has to offer.
-            </p>
+            <h2>Mind-enlightening Adventures</h2>
+            <p>Learn and explore through all the adventures we deliver.</p>
             <div class="button-position">
               <a href="/exhibition.html" class="navigation-buttons"
                 >View More</a
