--- a/exhibition.html
+++ b/exhibition.html
@@ -38,7 +38,13 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="exhibition-title-image">
+        <article class="exhibition-title-wrapper">
+          <h1>Our Exhibitions</h1>
+        </article>
+      </section>
+    </main>
     <footer>
       <section class="footer-elements">
         <a href="/about-us.html">About Us</a>
