--- a/exhibition.html
+++ b/exhibition.html
@@ -44,6 +44,36 @@
           <h1>Our Exhibitions</h1>
         </article>
       </section>
+      <section class="exhibition-section">
+        <article class="exhibition-article">
+          <img
+            src="/images/andrew-ruiz-348421.webp"
+            alt="Web of conected cables."
+            class="exhibition-article-image"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>Cosmology</h2>
+            <p>
+              Explore the wonders of our cosmos. Our fantastic exhibition, ‘The
+              Sky Above Us’, explores the night sky and what we can see and know
+              about the universe around us. We’ll locate the various
+              constellations and galaxies that can be seen and learn a bit about
+              the early navigators who used the stars to travel by.
+            </p>
+            <p>
+              Follow the journey of our solar exploration: from early Arab
+              traders, to Galileo’s telescope, to the latest exploration of the
+              planets in our solar system.
+            </p>
+            <a
+              href="/visit-us.html"
+              title="See our opening hours and prices."
+              class="navigation-buttons"
+              >Visit Us</a
+            >
+          </div>
+        </article>
+      </section>
     </main>
     <footer>
       <section class="footer-elements">
