--- a/exhibition.html
+++ b/exhibition.html
@@ -30,10 +30,26 @@
         /></label>
         <div class="nav-container">
           <ul class="hamburger-menu-elements">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/exhibition.html">Exhibitions</a></li>
-            <li><a href="/about-us.html">About Us</a></li>
-            <li><a href="/visit-us.html">Visit Us</a></li>
+            <li>
+              <a href="/index.html" title="Return to home screen">Home</a>
+            </li>
+            <li>
+              <a
+                href="/exhibition.html"
+                title="See thorugh all of our exhibitions"
+                >Exhibitions</a
+              >
+            </li>
+            <li>
+              <a href="/about-us.html" title="Learn more about us">About Us</a>
+            </li>
+            <li>
+              <a
+                href="/visit-us.html"
+                title="See our museums general information"
+                >Visit Us</a
+              >
+            </li>
           </ul>
         </div>
       </nav>
@@ -49,7 +65,7 @@
           <img
             src="/images/andrew-ruiz-348421.webp"
             alt="Web of conected cables."
-            class="exhibition-article-image"
+            class="exhibition-article-image-1"
           />
           <div class="exhibition-text-wrapper">
             <h2>Cosmology</h2>
@@ -73,12 +89,122 @@
             >
           </div>
         </article>
+        <article class="exhibition-article">
+          <img
+            src="/images/skeleton-414543_1920.webp"
+            alt="Skeletons of human evolution."
+            class="exhibition-article-image-2"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>The Human Evolution</h2>
+            <p>
+              For centuries, philosophers and scientists have wrestled with the
+              question of our origins. Where do we come from and how did we get
+              here? Since Darwin proposed his theory of evolution we have had a
+              framework for exploring and understanding our place in this world.
+            </p>
+            <p>
+              Discover the origins of life on this planet and how the species we
+              know today have evolved our time. You can also take some time to
+              meet a few of the creatures who didn’t survive, including our
+              Woolly Mammoth, the Dodos, and a number of dinosaurs too.
+            </p>
+            <a
+              href="/visit-us.html"
+              title="See our opening hours and prices."
+              class="navigation-buttons"
+              >Visit Us</a
+            >
+          </div>
+        </article>
+        <article class="exhibition-article">
+          <img
+            src="/images/people-219985_1280.webp"
+            alt="Man looking through a microscope."
+            class="exhibition-article-image-3"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>Biology & Medicine</h2>
+            <p>
+              From micro-organisms to the human body, major breakthroughs in
+              biology are offering us unique insights into the great wonders of
+              the tiny world.
+            </p>
+            <p>
+              For many people their life expectancy is much longer and their
+              quality of life much improved, thanks to the growth of our
+              understanding of medicine. Over a series of exhibits we explore
+              the history of medicine and take a look at some major
+              breakthroughs including the discovery of penicillin and the first
+              heart transplant.
+            </p>
+            <a
+              href="/visit-us.html"
+              title="See our opening hours and prices."
+              class="navigation-buttons"
+              >Visit Us</a
+            >
+          </div>
+        </article>
+        <article class="exhibition-article">
+          <img
+            src="/images/genoa-956405_1920.webp"
+            alt="Statues of ants."
+            class="exhibition-article-image-1"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>Ecology</h2>
+            <p>
+              As we learn more and more of the impact humans are having on the
+              planet, the more important it becomes that scientists explore how
+              to create a sustainable future not just for humans but for the
+              whole planet.
+            </p>
+            <p>
+              In our ecology section of the museum, we unpack the dangers we
+              currently face including global warming, extinction of species,
+              and pollution. But we also focus on the positive ways we can all
+              contribute to a brighter future.
+            </p>
+            <a
+              href="/visit-us.html"
+              title="See our opening hours and prices."
+              class="navigation-buttons"
+              >Visit Us</a
+            >
+          </div>
+        </article>
+        <article class="exhibition-article">
+          <img
+            src="/images/scientific-2040795_1280.webp"
+            alt="Scientist sitting by a machine"
+            class="exhibition-article-image-4"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>Robotics & AI</h2>
+            <p>
+              The information revolution is here and robotics and artificial
+              intelligence are the science of the future. From useful home
+              applications of AI to industrial uses of robotics, the future is
+              here. You can even say hello and shake the hand of Rob the Robot.
+            </p>
+            <a
+              href="/visit-us.html"
+              title="See our opening hours and prices."
+              class="navigation-buttons"
+              >Visit Us</a
+            >
+          </div>
+        </article>
       </section>
     </main>
     <footer>
       <section class="footer-elements">
         <a href="/about-us.html">About Us</a>
-        <img src="/images/open-science-735787-transparent-white.webp" />
+        <img
+          src="/images/open-science-735787-transparent-white.webp"
+          alt="Logo"
+        />
         <a href="/visit-us.html">Visit Us</a>
       </section>
       <div class="footer-background"></div>
