--- a/index.html
+++ b/index.html
@@ -30,10 +30,26 @@
         /></label>
         <div class="nav-container">
           <ul class="hamburger-menu-elements">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/exhibition.html">Exhibitions</a></li>
-            <li><a href="/about-us.html">About Us</a></li>
-            <li><a href="/visit-us.html">Visit Us</a></li>
+            <li>
+              <a href="/index.html" title="Return to home screen">Home</a>
+            </li>
+            <li>
+              <a
+                href="/exhibition.html"
+                title="See thorugh all of our exhibitions"
+                >Exhibitions</a
+              >
+            </li>
+            <li>
+              <a href="/about-us.html" title="Learn more about us">About Us</a>
+            </li>
+            <li>
+              <a
+                href="/visit-us.html"
+                title="See our museums general information"
+                >Visit Us</a
+              >
+            </li>
           </ul>
         </div>
       </nav>
