--- a/about-us.html
+++ b/about-us.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSM | About Us</title>
-    <meta name="description" content="Find out more about who we are." />
+    <title>CSM | Exhibitions</title>
+    <meta
+      name="description"
+      content="All of our amazing exhibitions at display."
+    />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
@@ -51,7 +54,141 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="about-us-title-image">
+        <article class="exhibition-title-wrapper">
+          <h1>About Us</h1>
+        </article>
+      </section>
+      <section class="exhibition-section">
+        <article class="exhibition-article">
+          <img
+            src="/images/david-ramirez-kkOHS0uIR0Y-unsplash.webp"
+            alt="Kids reading books."
+            class="exhibition-article-image-1"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>"Explore Together"</h2>
+            <p>
+              Come join us at the Community Science Museum where we’re committed
+              to making science accessible to all.
+            </p>
+            <p>
+              Over the course of human history, science has developed from our
+              early understanding of fire, wind, water, and earth to exploring
+              everything from galaxies far away to the very building blocks of
+              life itself.
+            </p>
+            <p>
+              The aim of our museum is to create a space where everyone can
+              experience the wonders of our discoveries and perhaps even ignite
+              a lifelong passion to continue the exploration of the world around
+              us. We believe science should not be confined to the textbook, but
+              brought to live through exhibits. This is why we have over 1000
+              different exhibits on the many varied subjects of science to
+              explore. Many of these exhibits are designed for you to interact
+              with and play around to see science come to life (apart from the
+              dinosaur exhibits – they only come to life at night when
+              everyone’s gone home).
+            </p>
+          </div>
+        </article>
+        <article class="exhibition-article">
+          <img
+            src="/images/exhibition-1863344_1920.webp"
+            alt="Space themed exhibition room."
+            class="exhibition-article-image-2"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>For Kids</h2>
+            <p>
+              Are you a young person looking to learn more about science? Come
+              on down to our museum, there’s plenty to see and do.
+            </p>
+            <p>
+              You can learn about Newtonian physics from our bumper swing, or
+              why not travel back in time and meet our resident Woolly Mammoth?
+              Our exhibits are designed to be accessible for interested minds,
+              so make sure you come ready to learn and explore.
+            </p>
+            <p>
+              We also have the
+              <span class="about-us-focus">Young Stars club</span> which meets
+              once a week on a Saturday between 10:00 and 13:00 where you’ll get
+              to explore and experiment with our team of experts.
+            </p>
+            <p>
+              During the school holidays we run special holiday clubs where you
+              can join other children your age to go on a journey of discovery.
+              Each holiday we pick a new theme to explore. To find out more
+              about the holiday club and how you can join, send us a message.
+            </p>
+          </div>
+        </article>
+        <article class="exhibition-article">
+          <img
+            src="/images/teacher-2816112.jpg"
+            alt="Cartoon teacher."
+            class="about-us-article-image-3"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>For Teachers</h2>
+            <p>
+              As a community-driven museum, we want to work with schools to
+              create places of
+              <span class="about-us-focus">learning and exploring</span>. Our
+              team are on hand to give your students guided tours of the museum,
+              teach them in our learning laboratory, and provide great video
+              presentations that will excite and inspire them.
+            </p>
+            <p>
+              Please get in touch with us here to find out more about our
+              facilities and to arrange a time to bring your students through
+              for a visit.
+            </p>
+          </div>
+        </article>
+        <article class="exhibition-article">
+          <img
+            src="/images/heart-2607178_1920.webp"
+            alt="Statues of a heart."
+            class="exhibition-article-image-4"
+          />
+          <div class="exhibition-text-wrapper">
+            <h2>Researchers</h2>
+            <p>
+              Are you looking to get involved with our team of
+              <span class="about-us-focus">researchers</span> and academics? Our
+              museum offers various ways for you to use our resources and
+              contribute towards them. We have online records, laboratory space,
+              and a working relationship with a number of universities around
+              the country.
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="event-section">
+        <h3 class="event-header">Events:</h3>
+        <div class="event-article-wrapper">
+          <article>
+            <h4>Visiting Professor of Aeronautics</h4>
+            <p>
+              It is our pleasure to announce that Prof Sheila Widnall from the
+              Massachusetts Institute of Technology will be delivering...
+            </p>
+            <p class="event-date">Dec 3. - Dec 10.</p>
+          </article>
+          <article>
+            <h4>Night in the Museum</h4>
+            <p>
+              Get your family together for an exciting night in the museum as
+              you sleep over beside dinosaurs and science displays...
+            </p>
+            <p class="event-date">Dec 6. - Dec 30.</p>
+          </article>
+        </div>
+      </section>
+    </main>
     <footer>
       <section class="footer-elements">
         <a href="/about-us.html">About Us</a>
