--- a/exhibition.html
+++ b/exhibition.html
@@ -64,7 +64,7 @@
         <article class="exhibition-article">
           <img
             src="/images/andrew-ruiz-348421.webp"
-            alt="Web of conected cables."
+            alt="Astronaut in a simluator"
             class="exhibition-article-image-1"
           />
           <div class="exhibition-text-wrapper">
@@ -150,7 +150,7 @@
           <img
             src="/images/genoa-956405_1920.webp"
             alt="Statues of ants."
-            class="exhibition-article-image-1"
+            class="exhibition-article-image-4"
           />
           <div class="exhibition-text-wrapper">
             <h2>Ecology</h2>
@@ -178,7 +178,7 @@
           <img
             src="/images/scientific-2040795_1280.webp"
             alt="Scientist sitting by a machine"
-            class="exhibition-article-image-4"
+            class="exhibition-article-image-5"
           />
           <div class="exhibition-text-wrapper">
             <h2>Robotics & AI</h2>
@@ -196,6 +196,27 @@
             >
           </div>
         </article>
+      </section>
+      <section class="event-section">
+        <h3 class="event-header">Events:</h3>
+        <div class="event-article-wrapper">
+          <article>
+            <h4>Visiting Professor of Aeronautics</h4>
+            <p>
+              It is our pleasure to announce that Prof Sheila Widnall from the
+              Massachusetts Institute of Technology will be delivering...
+            </p>
+            <p class="event-date">Dec 3. - Dec 10.</p>
+          </article>
+          <article>
+            <h4>Night in the Museum</h4>
+            <p>
+              Get your family together for an exciting night in the museum as
+              you sleep over beside dinosaurs and science displays...
+            </p>
+            <p class="event-date">Dec 6. - Dec 30.</p>
+          </article>
+        </div>
       </section>
     </main>
     <footer>
