--- a/about-us.html
+++ b/about-us.html
@@ -109,7 +109,8 @@
               You can learn about Newtonian physics from our bumper swing, or
               why not travel back in time and meet our resident Woolly Mammoth?
               Our exhibits are designed to be accessible for interested minds,
-              so make sure you come ready to learn and explore.
+              so make sure you come ready to
+              <span class="about-us-focus">learn and explore</span>.
             </p>
             <p>
               We also have the
@@ -158,11 +159,11 @@
             <h2>Researchers</h2>
             <p>
               Are you looking to get involved with our team of
-              <span class="about-us-focus">researchers</span> and academics? Our
-              museum offers various ways for you to use our resources and
-              contribute towards them. We have online records, laboratory space,
-              and a working relationship with a number of universities around
-              the country.
+              <span class="about-us-focus">researchers</span> and
+              <span class="about-us-focus">academics</span>? Our museum offers
+              various ways for you to use our resources and contribute towards
+              them. We have online records, laboratory space, and a working
+              relationship with a number of universities around the country.
             </p>
           </div>
         </article>
