--- a/visit-us.html
+++ b/visit-us.html
@@ -54,7 +54,40 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="visit-us-title-image">
+        <article class="exhibition-title-wrapper">
+          <h1>Visit Us</h1>
+        </article>
+      </section>
+      <section class="visit-us-wrapper">
+        <article class="visit-us-location">
+          <h1 class="location-header">The museum is located at:</h1>
+          <p class="location-text">Norgesvei 27, 9999 Boms</p>
+          <img
+            src="/images/Screenshot_1.png"
+            alt="Map with location."
+            class="location-img"
+          />
+        </article>
+        <article class="visit-us-opening-hours">
+          <h2 class="visit-us-opening-hours-header">Opening Hours:</h2>
+          <div class="visit-us-opening-hours-content">
+            <p>Monday: Closed</p>
+            <p>Tuesday: 10:00 – 16:00</p>
+            <p>Wednesday: 10:00 – 16:00</p>
+            <p>Thursday: 10:00 – 16:00</p>
+            <p>Friday: 10:00 – 19:00</p>
+            <p>Saturday: 9:00 – 16:00</p>
+            <p>Sunday: 9:00 – 13:00</p>
+          </div>
+        </article>
+        <div class="visit-us-admission-header-img"></div>
+        <article class="visit-us-admission">
+          <h2>Admission:</h2>
+        </article>
+      </section>
+    </main>
     <footer>
       <section class="footer-elements">
         <a href="/about-us.html">About Us</a>
