--- a/about-us.html
+++ b/about-us.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSM | Exhibitions</title>
-    <meta
-      name="description"
-      content="All of our amazing exhibitions at display."
-    />
+    <title>CSM | About Us</title>
+    <meta name="description" content="Read more about us and what we offer." />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
