--- a/visit-us.html
+++ b/visit-us.html
@@ -87,6 +87,27 @@
           <h2>Admission:</h2>
         </article>
       </section>
+      <section class="event-section">
+        <h3 class="event-header">Events:</h3>
+        <div class="event-article-wrapper">
+          <article>
+            <h4>Visiting Professor of Aeronautics</h4>
+            <p>
+              It is our pleasure to announce that Prof Sheila Widnall from the
+              Massachusetts Institute of Technology will be delivering...
+            </p>
+            <p class="event-date">Dec 3. - Dec 10.</p>
+          </article>
+          <article>
+            <h4>Night in the Museum</h4>
+            <p>
+              Get your family together for an exciting night in the museum as
+              you sleep over beside dinosaurs and science displays...
+            </p>
+            <p class="event-date">Dec 6. - Dec 30.</p>
+          </article>
+        </div>
+      </section>
     </main>
     <footer>
       <section class="footer-elements">
