--- a/visit-us.html
+++ b/visit-us.html
@@ -62,7 +62,7 @@
       </section>
       <section class="visit-us-wrapper">
         <article class="visit-us-location">
-          <h1 class="location-header">The museum is located at:</h1>
+          <h1 class="visit-us-header">The museum is located at:</h1>
           <p class="location-text">Norgesvei 27, 9999 Boms</p>
           <img
             src="/images/Screenshot_1.png"
@@ -71,20 +71,45 @@
           />
         </article>
         <article class="visit-us-opening-hours">
-          <h2 class="visit-us-opening-hours-header">Opening Hours:</h2>
-          <div class="visit-us-opening-hours-content">
-            <p>Monday: Closed</p>
-            <p>Tuesday: 10:00 – 16:00</p>
-            <p>Wednesday: 10:00 – 16:00</p>
-            <p>Thursday: 10:00 – 16:00</p>
-            <p>Friday: 10:00 – 19:00</p>
-            <p>Saturday: 9:00 – 16:00</p>
-            <p>Sunday: 9:00 – 13:00</p>
+          <h2 class="visit-us-header">Opening Hours:</h2>
+          <div class="visit-us-content">
+            <ul>
+              <li>Monday:</li>
+              <li>Tuesday:</li>
+              <li>Wednesday:</li>
+              <li>Thursday:</li>
+              <li>Friday:</li>
+              <li>Saturday:</li>
+              <li>Sunday:</li>
+            </ul>
+            <ul>
+              <li>Closed</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 – 16:00</li>
+              <li>10:00 – 16:00</li>
+              <li>10:00 – 19:00</li>
+              <li>9:00 – 16:00</li>
+              <li>9:00 – 13:00</li>
+            </ul>
           </div>
         </article>
-        <div class="visit-us-admission-header-img"></div>
         <article class="visit-us-admission">
-          <h2>Admission:</h2>
+          <div class="visit-us-admission-header-img"></div>
+          <h2 class="visit-us-header">Admission:</h2>
+          <div class="visit-us-content">
+            <ul>
+              <li>Children:</li>
+              <li>Adults:</li>
+              <li>Students:</li>
+              <li>Courtesy:</li>
+            </ul>
+            <ul>
+              <li>30kr</li>
+              <li>70kr</li>
+              <li>50kr</li>
+              <li>50kr</li>
+            </ul>
+          </div>
         </article>
       </section>
       <section class="event-section">
