--- a/about-us.html
+++ b/about-us.html
@@ -125,7 +125,7 @@
         </article>
         <article class="exhibition-article">
           <img
-            src="/images/teacher-2816112.jpg"
+            src="/images/teacher-2816112.webp"
             alt="Cartoon teacher."
             class="about-us-article-image-3"
           />
