--- a/visit-us.html
+++ b/visit-us.html
@@ -65,7 +65,7 @@
           <h1 class="visit-us-header">The museum is located at:</h1>
           <p class="location-text">Norgesvei 27, 9999 Boms</p>
           <img
-            src="/images/Screenshot_1.png"
+            src="/images/Screenshot_1.webp"
             alt="Map with location."
             class="location-img"
           />
