--- a/about-us.html
+++ b/about-us.html
@@ -166,9 +166,9 @@
         </article>
       </section>
       <section class="event-section">
-        <h3 class="event-header">Events:</h3>
         <div class="event-article-wrapper">
           <article>
+            <h3 class="event-header">Events:</h3>
             <h4>Visiting Professor of Aeronautics</h4>
             <p>
               It is our pleasure to announce that Prof Sheila Widnall from the
@@ -176,7 +176,7 @@
             </p>
             <p class="event-date">Dec 3. - Dec 10.</p>
           </article>
-          <article>
+          <article class="event-article-fix">
             <h4>Night in the Museum</h4>
             <p>
               Get your family together for an exciting night in the museum as
